Week11-2025_11_18/9-targetgroup.tf
resource "aws_lb_target_group" "shai_hulud_tg" {
  name     = "shai-hulud-target-group"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
  target_type = "instance"

  health_check {
    enabled             = true
    interval            = 30
    path                = "/"
    protocol            = "HTTP"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    timeout             = 5
    matcher             = "200"
  }

  tags = {
    Name    = "WebTierTargetGroup"
    Service = "ShaiHulud"
    Owner   = "Alex"
    Project = "Web Service"
  }
}
