Week11-2025_11_18/6-sg.tf
# for web server only
resource "aws_security_group" "web_server" {
  name        = "web_server"
  description = "Allow HTTP and SSH for web server"
  vpc_id      = aws_vpc.main.id

  tags = {
    Name = "shai_hulud_web-server-ingress"
  }
}

resource "aws_vpc_security_group_ingress_rule" "http" {
  security_group_id = aws_security_group.web_server.id
  description = "HTTP from alb"
  cidr_ipv4   = "0.0.0.0/0"
  from_port   = 80
  ip_protocol = "tcp"
  to_port     = 80
}

resource "aws_vpc_security_group_ingress_rule" "ssh" {
   security_group_id = aws_security_group.web_server.id
   description = "SSH from internet"
   cidr_ipv4   = "0.0.0.0/0"
   from_port   = 22
   ip_protocol = "tcp"
   to_port     = 22
 }
 
resource "aws_vpc_security_group_egress_rule" "egress" {
  security_group_id = aws_security_group.web_server.id
  description = "Allow all outbound traffic"
  cidr_ipv4   = "0.0.0.0/0"
  ip_protocol = "-1"
}


# SG for ping only
# resource "aws_security_group" "ping" {
#   name        = "ping"
#   description = "Allow icmp for ping"
#   vpc_id      = aws_vpc.main.id

#   tags = {
#     Name = "icmp-for-ping"
#   }
# }

# resource "aws_vpc_security_group_ingress_rule" "icmp" {
#   security_group_id = aws_security_group.ping.id

#   cidr_ipv4   = "0.0.0.0/0"
#   from_port   = -1
#   ip_protocol = "icmp"
#   to_port     = -1
# }

# resource "aws_vpc_security_group_egress_rule" "egress_for_http" {
#   security_group_id = aws_security_group.ping.id
#   cidr_ipv4         = "0.0.0.0/0"
#   ip_protocol       = "-1"
# }
